--- a/stil.css
+++ b/stil.css
@@ -1,6 +1,16 @@
 /* stil.css */
+@media only screen and (max-width: 959px) {
+      .navbar{
+       position: relative;
+    top: -250px;
+    left: 650px;
+    color: white;
+    font-size: 28px;
+    background-color: red;
+    background-size: %90;
+    background-repeat: no-repeat;
 
-*{
+{
       margin: 10;
       padding 0;
       
