--- a/stil.css
+++ b/stil.css
@@ -5,6 +5,12 @@
       padding 0;
       
       }
+#canvas1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
 body {
       
