--- a/stil.css
+++ b/stil.css
@@ -21,7 +21,7 @@ body {
     background-repeat: no-repeat; /* Arka plan resminin tekrar etmemesini sağlar */
 }
   .navbar{
-       position: relative;
+       position: absolute;
     top: -250px;
     left: 850px;
        
