--- a/stil.css
+++ b/stil.css
@@ -1,8 +1,8 @@
 /* stil.css */
 
 {
-      margin: 10;
-      padding 10;
+      margin: 100%;
+      padding 100%;
       
       }
       #canvas1 {
