--- a/stil.css
+++ b/stil.css
@@ -1,8 +1,8 @@
 /* stil.css */
 
 {
-      margin: 100%;
-      padding 100%;
+      margin: 0;
+      padding 0;
       
       }
       #canvas1 {
