--- a/stil.css
+++ b/stil.css
@@ -5,12 +5,12 @@
       padding 0;
       
       }
-      /* #canvas1 {
+      #canvas1 {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;*/
+    height: 100%;
    
 }
       
@@ -21,11 +21,9 @@ body {
     background-repeat: no-repeat; /* Arka plan resminin tekrar etmemesini sağlar */
 }
   .navbar{
-        
-    position: relative;
+       position: relative;
     top: -250px;
-    left: 900px;
-        
+    left: 850px;
        
        }
 
