--- a/stil.css
+++ b/stil.css
@@ -27,6 +27,13 @@ body {
     left: 850px;
        
        }
+b {
+
+    color: white;
+    font-size: 28px;
+    background-color: red;
+                                                
+ {
 
 
 a {
