--- a/stil.css
+++ b/stil.css
@@ -33,7 +33,7 @@ b {
     font-size: 28px;
     background-color: red;
                                                 
- {
+}
 
 
 a {
@@ -42,4 +42,4 @@ a {
     font-size: 28px;
     background-color: red;
                                                 
- {
+}
