--- a/stil.css
+++ b/stil.css
@@ -43,3 +43,30 @@ a {
     background-color: red;
                                                 
 }
+
+@media (max-width: 768px) {
+   body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    background-image: url("https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/a2f7c9d8-a913-4273-847f-705be41395df/d9ebz2w-66957331-3bd7-4c21-9da4-f42cb7b178c5.gif?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOjdlMGQxODg5ODIyNjQzNzNhNWYwZDQxNWVhMGQyNmUwIiwiaXNzIjoidXJuOmFwcDo3ZTBkMTg4OTgyMjY0MzczYTVmMGQ0MTVlYTBkMjZlMCIsIm9iaiI6W1t7InBhdGgiOiJcL2ZcL2EyZjdjOWQ4LWE5MTMtNDI7In1dXSwiYXVkIjpbInVybjpzZXJ2aWNlOmZpbGUuZG93bmxvYWQiXX0.fN24kFldhLDg1ad0rzTWYCia2LsbNjnlST2iOVRJ934");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.navbar {
+    position: relative;
+    top: -250px;
+    left: 10%; /* Sol kenara yakın olacak */
+}
+
+b, a {
+    color: white;
+    font-size: 20px; /* Font boyutunu azalttık */
+    background-color: red;
+    display: block; /* Öğeleri blok seviyeye getirdik */
+    margin: 10px 0; /* Yatay boşluk ekledik */
+    text-align: center; /* Metni ortaladık */
+    padding: 10px;
+}
+}
