--- a/stil.css
+++ b/stil.css
@@ -13,7 +13,7 @@ body {
     background-repeat: no-repeat; /* Arka plan resminin tekrar etmemesini sağlar */
 }
   .navbar{
-       position: absolute;
+       position: relative;
     top: -250px;
     left: 700px;
        
