--- a/stil.css
+++ b/stil.css
@@ -17,7 +17,7 @@ body {
     left: 700px;
        
        }
-  .hesaplarım{
+  h1 {
         position: relative;
         top: 250px;
         left: 700px;
